src/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>AWS_download_link__c</fullName>
        <label>AWS download link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accepted_Payment_Methods__c</fullName>
        <label>Accepted Payment Methods</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accepted_Term_Condition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accepted Term &amp; Condition</label>
        <referenceTo>Term_and_Condition__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_for_Subscription__c</fullName>
        <formula>IF(ISBLANK(PricebookEntry.Product2.IEC_Parent_Product__c), PricebookEntry.Product2.Available_for_Subscription__c, PricebookEntry.Product2.IEC_Parent_Product__r.Available_for_Subscription__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available for Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Carrier_Name__c</fullName>
        <label>Carrier Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Tracking_Number__c</fullName>
        <label>Carrier Tracking Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Tracking_URL__c</fullName>
        <formula>IF(OR(NOT(CONTAINS(&quot;,UPS,FEDEX,GLOBEX,SDV,&quot;, &quot;,&quot; &amp; UPPER(Carrier_Name__c) &amp; &quot;,&quot;)), ISBLANK(Carrier_Tracking_Number__c)), IF(ISBLANK(Carrier_Name__c), &apos;&apos;, &apos;(&apos; &amp; UPPER(Carrier_Name__c) &amp; &apos;) &apos;) &amp; Carrier_Tracking_Number__c,
HYPERLINK(
CASE(UPPER(Carrier_Name__c),
&quot;UPS&quot;, &quot;http://wwwapps.ups.com/etracking/tracking.cgi?tracknums_displayed=5&amp;TypeOfInquiryNumber=T&amp;sort_by=status&amp;InquiryNumber1=&quot;,
&quot;FEDEX&quot;, &quot;https://www.fedex.com/apps/fedextrack/?action=track&amp;trackingnumber=&quot;,
&quot;GLOBEX&quot;, &quot;http://www.globexcourier.com/index.php/en/tracking-results?globexNumbers=&quot;,
&quot;SDV&quot;, &quot;https://link.sdv.com/Contact/Shipment/&quot;,
&quot;&quot;) + Carrier_Tracking_Number__c, &apos;(&apos; &amp; UPPER(Carrier_Name__c) &amp; &apos;) &apos; &amp; Carrier_Tracking_Number__c, &quot;_blank&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carrier Tracking</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipping Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_Quantity__c</fullName>
        <label>Confirmed Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coupon__c</fullName>
        <label>Coupon</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Debit__c</fullName>
        <label>Credit/Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Days_available_for_download_1__c</fullName>
        <formula>PricebookEntry.Product2.Days_available_for_download_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days available for download</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Number__c</fullName>
        <label>Delivery Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>IEC - SAP division code to send in sales order</description>
        <formula>IF(ISBLANK(PricebookEntry.Product2.IEC_Parent_Product__c), PricebookEntry.Product2.SAP_Division_Code__c, PricebookEntry.Product2.IEC_Parent_Product__r.SAP_Division_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <formula>DATE(
  YEAR( Order.EffectiveDate ) + FLOOR( ( MONTH ( Order.EffectiveDate ) +  IEC_Number_of_months_of_subscription__c - 1 ) / 12 ),
  MOD( MONTH ( Order.EffectiveDate ) +  IEC_Number_of_months_of_subscription__c - 1 + 
    IF( DAY ( Order.EffectiveDate ) &gt; CASE( MOD( MONTH( Order.EffectiveDate ) +  IEC_Number_of_months_of_subscription__c - 1, 12 ) + 1, 
      2, 28,
      4, 30,
      6, 30,
      9, 30, 
      11, 30,
      31 ), 1, 0 ), 12 ) + 1,
    IF( DAY( Order.EffectiveDate ) &gt; CASE( MOD( MONTH( Order.EffectiveDate ) +  IEC_Number_of_months_of_subscription__c - 1, 12 ) + 1,
      2, 28, 
      4, 30, 
      6, 30, 
      9, 30, 
      11, 30, 
      31 ), 
    1, DAY( Order.EffectiveDate )
  )
) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>File_Path__c</fullName>
        <formula>PricebookEntry.Product2.File_Path__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Charge__c</fullName>
        <label>Shipping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Handling_charges__c</fullName>
        <label>Handling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IEC_Contract_End_Date__c</fullName>
        <description>IEC - end date to use to create contract for items created from Zuora invoices</description>
        <label>IEC Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IEC_Contract_Start_Date__c</fullName>
        <description>IEC - start date to use to create contract for items created from Zuora invoices</description>
        <label>IEC Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IEC_Event_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IEC Event Subscription</label>
        <referenceTo>IEC_Event_Subscription__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IEC_Is_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IEC - true means product is paid in order to trigger fullfilment process if applicable</description>
        <label>Is Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IEC_Number_of_months_of_subscription__c</fullName>
        <description>IEC - duration in months for subscription</description>
        <formula>BLANKVALUE(IF(ISBLANK(PricebookEntry.Product2.IEC_Parent_Product__c), PricebookEntry.Product2.Number_of_months_of_subscription__c, PricebookEntry.Product2.IEC_Parent_Product__r.Number_of_months_of_subscription__c), 12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of months of Subscription</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IEC_Override_Profit_Center__c</fullName>
        <description>IEC - true to use profit center in ISO country when create contract instead of profit center of product</description>
        <formula>IF(ISBLANK(PricebookEntry.Product2.IEC_Parent_Product__c), PricebookEntry.Product2.IEC_Override_Profit_Center__c,  PricebookEntry.Product2.IEC_Parent_Product__r.IEC_Override_Profit_Center__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Override Profit Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IEC_Static_Cart_Quantity__c</fullName>
        <formula>PricebookEntry.Product2.IEC_Static_Cart_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Static Cart Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IEC_Subscribe_to_Zuora__c</fullName>
        <description>Determine if to subscribe the product to Zuora on purchase</description>
        <formula>PricebookEntry.Product2.IEC_Subscribe_to_Zuora__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscribe to Zuora</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number_URL__c</fullName>
        <formula>IF(ISBLANK(Invoice_Number__c), &quot;&quot;, HYPERLINK(&quot;/apex/IECInvoice?invoice=&quot; + Invoice_Number__c, Invoice_Number__c, &quot;_blank&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Number URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Electronic_Product__c</fullName>
        <description>IEC - identify if product is an electronic product</description>
        <formula>PricebookEntry.Product2.Is_Electronic_Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Electronic Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Quantity_Integer__c</fullName>
        <description>IEC - check if product allows only integer quantity in order to format quantity&apos;s field in UI</description>
        <formula>PricebookEntry.Product2.Is_Quantity_Integer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Quantity Integer</label>
        <type>Checkbox</type>
    </fields>
	 <fields>
        <fullName>Is_Remote_Validation__c</fullName>
        <description>Retrieve PricebookEntry.Product2.Smart_Facility_Remote_Validation__c to be used to prove that this row is remote validation.</description>
        <formula>PricebookEntry.Product2.Smart_Facility_Remote_Validation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Remote Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Remote_Validation__c</fullName>
        <description>Retrieve PricebookEntry.Product2.Smart_Facility_Remote_Validation__c to be used to prove that this row is remote validation.</description>
        <formula>PricebookEntry.Product2.Smart_Facility_Remote_Validation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Remote Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SAP_Editable__c</fullName>
        <description>Determines whether the order item is editable after it has been submitted to SAP</description>
        <formula>IF(&quot;A&quot; == TEXT(Order.StatusCode), false, IF(Order.Is_Paid__c &amp;&amp; NOT(Is_Shippable_Product__c), false, true))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is SAP Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Shippable_Product__c</fullName>
        <description>IEC - identify if product is a physical product</description>
        <formula>IF(ISBLANK(PricebookEntry.Product2.IEC_Parent_Product__c), PricebookEntry.Product2.Is_Shippable__c, PricebookEntry.Product2.IEC_Parent_Product__r.Is_Shippable__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Shippable Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Web_Download__c</fullName>
        <description>IEC - identify if product is web downloadable</description>
        <formula>PricebookEntry.Product2.Is_Web_Download__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Web Download</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_download__c</fullName>
        <label>Number of download</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Transaction_Number__c</fullName>
        <label>Payment Transaction Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Availability__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Inventory_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Availability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Manager__c</fullName>
        <description>IEC - name of product manager</description>
        <formula>IF(ISBLANK(PricebookEntry.Product2.IEC_Parent_Product__c), PricebookEntry.Product2.Product_Manager_lookup__r.FirstName + &apos; &apos; + PricebookEntry.Product2.Product_Manager_lookup__r.LastName, PricebookEntry.Product2.IEC_Parent_Product__r.Product_Manager_lookup__r.FirstName + &apos; &apos; + PricebookEntry.Product2.IEC_Parent_Product__r.Product_Manager_lookup__r.LastName)</formula>
        <label>Product Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <formula>PricebookEntry.Product2.SAP_Material_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>PricebookEntry.Product2.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Contract_Number__c</fullName>
        <label>SAP Contract Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Product_Number__c</fullName>
        <description>Determines the accurate SAP Material number based on whether the selected product has a parent product or not.</description>
        <formula>IF(ISBLANK(PricebookEntry.Product2.IEC_Parent_Product__c), PricebookEntry.Product2.IEC_SAP_Material_Number_Unformatted__c,  PricebookEntry.Product2.IEC_Parent_Product__r.IEC_SAP_Material_Number_Unformatted__c)</formula>
        <label>SAP Product Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Volume__c</fullName>
        <formula>Total__c + Credit_Debit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scheduled_Delivery_Date__c</fullName>
        <label>Scheduled Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Setup_Fee__c</fullName>
        <label>Setup Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipped_Date__c</fullName>
        <label>Shipped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipped_Quantity__c</fullName>
        <label>Shipped Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <inlineHelpText>Source of the Order Item, either Ecommerce (frontend) or NULL if from CDS console.</inlineHelpText>
        <label>Source</label>
        <length>200</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Station__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the ICG Account Role Detail (Facility) related to the item</description>
        <label>Station</label>
        <referenceTo>ICG_Account_Role_Detail__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the ICG Account Role Detail (Facility) related to the item</description>
        <label>Station</label>
        <referenceTo>ICG_Account_Role_Detail__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confimed</fullName>
                </value>
                <value>
                    <fullName>Backorder</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubTotal__c</fullName>
        <formula>(Quantity * UnitPrice) + BLANKVALUE(Setup_Fee__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscription_End_Date__c</fullName>
        <formula>Order.IEC_Payment_Date__c  + ( ( 365 / 12 ) * PricebookEntry.Product2.Number_of_months_of_subscription__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription_End_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TC_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T&amp;C Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>BLANKVALUE(SubTotal__c, 0) - BLANKVALUE(Discount__c, 0) + BLANKVALUE(Freight_Charge__c, 0) + BLANKVALUE(Tax__c, 0) + BLANKVALUE( Handling_charges__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Use_Contract_when_ordered__c</fullName>
        <description>IEC - determine if to create contract instead of send with sales order</description>
        <formula>IF(ISBLANK(PricebookEntry.Product2.IEC_Parent_Product__c), PricebookEntry.Product2.Use_Contract_when_ordered__c, PricebookEntry.Product2.IEC_Parent_Product__r.Use_Contract_when_ordered__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Use Contract when ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zuora_InvoiceId__c</fullName>
        <label>Zuora InvoiceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_InvoiceNumber__c</fullName>
        <label>Zuora InvoiceNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_Rate_Plan_Charge_Id__c</fullName>
        <label>Zuora Rate Plan Charge Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_Rate_Plan_Id__c</fullName>
        <label>Zuora Rate Plan Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_Setup_Fee_Charge_Id__c</fullName>
        <label>Zuora Setup Fee Charge Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_Setup_Fee_Plan_Id__c</fullName>
        <label>Zuora Setup Fee Plan Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_SubscriptionId__c</fullName>
        <label>Zuora SubscriptionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_Subscription_Number__c</fullName>
        <label>Zuora Subscription Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_Subscription_Status__c</fullName>
        <label>Zuora Subscription Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>